<resources>
    <string name="app_name">SolarData</string>
    <string name="settings_username">Angemeldet als:\n%s</string>
    <string name="settings_device">Installierte Anlage:\n%s</string>
    <string name="settings_device_output">%s</string>
    <string name="detail_power_output">Power output: %s</string>
    <string name="error_msg_api_request">Error fetching remote data</string>
    <string name="error_api_request_btn_retry">Retry</string>
    <string name="login_logo_alt_text">SolarData logo</string>
    <string name="login_headline">Login</string>
    <string name="login_headline_greeting">Willkommen bei SolarData</string>
    <string name="login_form_input_hint_email">Email</string>
    <string name="login_form_input_hint_password">Password</string>
    <string name="login_form_error_msg_missing_credentials">Please enter your login data</string>
    <string name="btn_cta_login">Login</string>
    <string name="component_summary_headline">Produzierte Energie</string>
    <string name="component_summary_label_month">This Month</string>
    <string name="component_summary_label_year">This Year</string>
    <string name="component_summary_label_lifetime">Lifetime</string>
    <string name="component_summary_value_month">500 kWh</string>
    <string name="component_summary_value_year">3.12 MWh</string>
    <string name="component_summary_value_lifetime">32.9 MWh</string>
    <string name="device_selection_headline">Ihre Balkon-Solaranlage</string>
    <string name="device_selection_headline_instruction">Choose from list of available devices to connect to</string>
    <string name="device_detail_image_alt_text">Device image</string>
    <string name="device_detail_btn_cta_select">Select device</string>
    <string name="device_itemview_image_alt_text">Device image</string>
    <string name="settings_headline">Account/Settings</string>
    <string name="settings_btn_cta_logout">Logout</string>
    <string name="menu_item_label_home">Today</string>
    <string name="menu_item_label_history">History</string>
    <string name="menu_item_label_profile">Profile</string>
    <string name="headline_chart_production">Produktion</string>
</resources>