<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/component_summary_headline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLabel1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/component_summary_label_month"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/component_summary_value_month"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLabel2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/component_summary_label_year"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/component_summary_value_year"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLabel3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/component_summary_label_lifetime"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/component_summary_value_lifetime"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tlTabs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.tabs.TabLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chartWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/headline_chart_production"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="13sp" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/acChart"
                    android:layout_width="match_parent"
                    android:layout_height="320dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>